FIAP/k8s/artifacts.yaml
---
# Source: diner/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iburguer
---
# Source: diner/templates/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: iburguer
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
---
# Source: diner/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diner
  namespace: iburguer
  labels:
    helm.sh/chart: diner-0.1.0
    app.kubernetes.io/name: diner
    app.kubernetes.io/instance: diner
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: diner
    app.kubernetes.io/instance: diner
---
# Source: diner/templates/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: iburguer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-pv-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
        - name: postgres-pv-initdb
          configMap:
            name: postgres-initdb-config
      containers:
        - name: postgres
          image: postgres:11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-pv-initdb
---
# Source: diner/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diner
  namespace: iburguer
  labels:
    helm.sh/chart: diner-0.1.0
    app.kubernetes.io/name: diner
    app.kubernetes.io/instance: diner
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: diner
      app.kubernetes.io/instance: diner
  template:
    metadata:
      labels:
        helm.sh/chart: diner-0.1.0
        app.kubernetes.io/name: diner
        app.kubernetes.io/instance: diner
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - name: diner
          image: "cdvt/iburguer:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /hc
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /hc
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 800Mi
            requests:
              cpu: 100m
              memory: 256Mi
---
# Source: diner/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diner
  namespace: iburguer
  labels:
    helm.sh/chart: diner-0.1.0
    app.kubernetes.io/name: diner
    app.kubernetes.io/instance: diner
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: diner-ingress
  rules:
    - host: "4.156.123.183"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: diner
                port:
                  number: 80
